NEW    : Ticket #552, Add the ability to check if a newer stable version
         is available using Help --> Check for update
NEW    : Ticket #1738, Support for decoding FLV SWF ADPCM
CHANGED: Updated libpng to v1.5.9
CHANGED: Updated Little CMS to the latest git (25/02/2012)
CHANGED: Updated libav
CHANGED: Updated MediaInfoLib to v0.7.54
CHANGED: Updated ZenLib to v0.4.25
CHANGED: Updated VirtualDub to v1.10.2-test5
CHANGED: New icons for the Windows 7 Taskbar
CHANGED: Updated Polish, Japanese, Chinese Simplified, Chinese Traditional, Russian,
         Ukrainian, German and Slovak translations
FIXED  : Long opening of MKV files after using the "mkvclean" utility
FIXED  : Incorrect detection of interlaced flag on some MPEG2 stream with DXVA decoder,
         fix choppy playback with incorrect frame rate
FIXED  : MPASplitter can't split some .MP3 files
FIXED  : MPC Video Decoder switched to software decode mode, even if only DXVA decoder was
         selected, but wasn't supported
FIXED  : MPEGSplitter can't load MPEG-TS files with corrupted packet header
         (incorrect Adaptation Field)
FIXED  : Freeze occurs when madVR leaves exclusive mode
FIXED  : MPCVideoDec bad playback with VC1 files with pulldown in MPEG-TS
FIXED  : Ticket #1007, FLVSplitter: increased the depth of the search for audio and video tags
FIXED  : Ticket #2007, Prevent a memory leak in FLACSource
FIXED  : Ticket #2013, bug when saving the ASS/SSA subtitle, the header has incorrect values
FIXED  : Ticket #2014, Embedded subtitle overrides "Prefer external"
FIXED  : Ticket #2047, Apply button under "EVR Sync Settings" can't be clicked
FIXED  : Ticket #2057, Don't crash with some incomplete .AVI files
FIXED  : Ticket #2057, MatroskaSplitter does not use properly cropping parameters
FIXED  : Numerous other bugfixes and improvements


For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/docs/Changelog_old.txt